# qrpc

./: CMakeLists.txt
Client/: Call.cpp  Call.h  Connection.cpp  Connection.h
CodeGen/: MethodWrapper.cpp  Msg.cpp  Msg.h  Service.cpp  Service.h
Sample/echo/Client/: CMakeLists.txt  main.cpp
Sample/echo/Server/: CMakeLists.txt  main.cpp
Sample/echo/msg/: MsgGen.cpp  MsgGen.h  ServiceGen.cpp  ServiceGen.h
Server/: Server.cpp  Server.h  ServerBuilder.cpp  ServerBuilder.h
Server/Reactor/: EventHandler.h
Server/Reactor/EpollImplement/: EpollEvents.h  EpollReactorImplementation.cpp  EpollReactorImplementation.h
Server/Reactor/EpollImplement/Handlers/: ListeningHandler.cpp  ListeningHandler.h  SocketHandler.cpp  SocketHandler.h
cmake/: qgen.cmake
example/echo/client/: CMakeLists.txt  main.cpp
example/echo/msg/: MsgGen.cpp  MsgGen.h  ServiceGen.cpp  ServiceGen.h
example/echo/server/: CMakeLists.txt  main.cpp
impl/: ByteBuf.cpp  ByteBuf.h  ReaderWriter.h  ReaderWriterImplement.cpp  ReaderWriterImplement.h
include/client/: Call.h  Connection.h
include/code_gen/: MethodWrapper.h  Msg.h  MsgPackage.h  SDStream.h  Serializable.h
include/impl/: ByteBuf.h  Handle.h  MethodWrapper.h  MsgPackage.h  ReaderWriter.h  ReaderWriterImplement.h  SDStream.h  Serializable.h
include/impl/code_gen/: AST.hpp  ArgParse.h  CodeGenTemplate.h  QrpcGrammar.hpp  Stream.h  SymbolTable.hpp  TypeMap.h  Visitor.h
include/impl/code_gen/template/: CppMessageOut.h  CppServiceOut.h
include/net/: ByteBuf.h
include/server/reactor/: EventHandler.h  EventType.h  Reactor.hpp
include/server/reactor/epoll/: EpollEvents.h  EpollReactorImplementation.h
include/server/reactor/epoll/handlers/: ListeningHandler.h  SocketHandler.h
include/support/: ThreadBase.hpp  ThreadPool.hpp
src/client/: Call.cpp  Connection.cpp
src/code_gen/: MethodWrapper.cpp  Msg.cpp  MsgPackage.cpp  SDStream.cpp  Serializable.cpp  Service.cpp
src/impl/: ByteBuf.cpp  MethodWrapper.cpp  Msg.cpp  MsgPackage.cpp  ReaderWriterImplement.cpp  SDStream.cpp  Serializable.cpp  Service.cpp
src/impl/code_gen/: ArgParse.cpp  CodeGenTemplate.cpp  Stream.cpp  SymbolTable.cpp  TypeMap.cpp  Visitor.cpp  main.cpp
src/impl/code_gen/template/: CppMessageOut.cpp  CppServiceOut.cpp
src/net/: ByteBuf.cpp  ReaderWriterImplement.cpp
src/server/: Server.cpp  ServerBuilder.cpp
src/server/reactor/epoll/: EpollReactorImplementation.cpp
src/server/reactor/epoll/handlers/: ListeningHandler.cpp  SocketHandler.cpp
src/support/: ThreadBase.cpp  ThreadPool.cpp
